--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -20,7 +20,7 @@
    <string>Arado Url Display</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" rowspan="2">
+   <item row="0" column="0" rowspan="3">
     <widget class="QPushButton" name="addUrlButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -75,7 +75,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
+   <item row="2" column="2">
     <widget class="QPushButton" name="filterButtton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -91,7 +91,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="3">
+   <item row="2" column="3">
     <widget class="QPushButton" name="recentButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -107,7 +107,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="4">
+   <item row="3" column="0" colspan="4">
     <widget class="QScrollArea" name="scrollArea">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -124,7 +124,7 @@
         <x>0</x>
         <y>0</y>
         <width>780</width>
-        <height>399</height>
+        <height>395</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -204,17 +204,7 @@
      </widget>
     </widget>
    </item>
-   <item row="3" column="2" colspan="2">
-    <widget class="QLabel" name="labelconnections">
-     <property name="toolTip">
-      <string>Shows how many incoming and outgoing connections are established (maximum = 30). If connections = 0, please add one online IP+Port and press the boot button to connect and fill the IP-cache.</string>
-     </property>
-     <property name="text">
-      <string>Connections (in/out): 30/30</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
+   <item row="2" column="1">
     <widget class="QPushButton" name="openUrlButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -227,6 +217,16 @@
      </property>
      <property name="text">
       <string>Browse URL</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="3">
+    <widget class="QLineEdit" name="lineEdit"/>
+   </item>
+   <item row="4" column="0" colspan="4">
+    <widget class="QPushButton" name="pushButton">
+     <property name="text">
+      <string>Connections (in/out): 30/30</string>
      </property>
     </widget>
    </item>
