--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -20,7 +20,7 @@
    <string>Arado Url Display</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" rowspan="4">
+   <item row="0" column="0" rowspan="3">
     <widget class="QPushButton" name="addUrlButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -73,12 +73,9 @@
      <property name="text">
       <string>Arado - URL Database</string>
      </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
     </widget>
    </item>
-   <item row="4" column="0" colspan="4">
+   <item row="3" column="0" colspan="4">
     <widget class="QScrollArea" name="scrollArea">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -95,7 +92,7 @@
         <x>0</x>
         <y>0</y>
         <width>780</width>
-        <height>395</height>
+        <height>399</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -175,33 +172,29 @@
      </widget>
     </widget>
    </item>
-   <item row="0" column="3">
-    <widget class="QLineEdit" name="lineEdit"/>
-   </item>
-   <item row="5" column="0" colspan="4">
-    <widget class="QPushButton" name="pushButton">
-     <property name="text">
-      <string>Connections (in/out): 30/30</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="3">
-    <widget class="QPushButton" name="filterButtton">
+   <item row="4" column="0" colspan="4">
+    <widget class="QLabel" name="bottomLabel">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="toolTip">
-      <string>Filter your local URL-database for the entered keyword(s).</string>
+      <string>Shows how many incoming and outgoing connections are established (maximum = 30). If connections = 0, please add one online IP+Port and press the boot button to connect and fill the IP-cache.</string>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
      </property>
      <property name="text">
-      <string>Search</string>
+      <string>Connections (in/out): 30/30</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
-   <item row="2" column="2">
+   <item row="0" column="3">
     <widget class="QPushButton" name="recentButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -217,7 +210,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="1" column="3">
     <widget class="QPushButton" name="openUrlButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -230,6 +223,25 @@
      </property>
      <property name="text">
       <string>Browse URL</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="textInput"/>
+   </item>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="filterButtton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="toolTip">
+      <string>Filter your local URL-database for the entered keyword(s).</string>
+     </property>
+     <property name="text">
+      <string>Search</string>
      </property>
     </widget>
    </item>
