--- a/arado.qrc
+++ b/arado.qrc
@@ -50,7 +50,7 @@
         <file>images/btn2.png</file>
         <file>images/btn3.png</file>
         <file>images/youtubemp3play.png</file>
-        <file>images/rssbackground.gif</file>
+        <file>images/rssbackground.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
