--- a/ui/rss-list.ui
+++ b/ui/rss-list.ui
@@ -18,7 +18,7 @@
     <normaloff>:/arado-logo-colo-128.png</normaloff>:/arado-logo-colo-128.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="6" column="0" colspan="2">
+   <item row="6" column="0" colspan="4">
     <widget class="QTableWidget" name="feedTable">
      <property name="styleSheet">
       <string notr="true"/>
@@ -48,7 +48,13 @@
     </widget>
    </item>
    <item row="1" column="0">
-    <widget class="QPushButton" name="closeButton">
+    <widget class="QPushButton" name="closeButton1">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="toolTip">
       <string>Close Tab.</string>
      </property>
@@ -60,7 +66,7 @@
      </property>
      <property name="icon">
       <iconset resource="../arado.qrc">
-       <normaloff>:/images/rssbackground.gif</normaloff>:/images/rssbackground.gif</iconset>
+       <normaloff>:/images/rssbackground.png</normaloff>:/images/rssbackground.png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -156,8 +162,18 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="2" colspan="2">
-    <widget class="QTableWidget" name="tableWidget"/>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="closeButton2">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>43</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Close</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
