--- a/ui/rss-list.ui
+++ b/ui/rss-list.ui
@@ -41,26 +41,12 @@
      </property>
      <property name="iconSize">
       <size>
-       <width>96</width>
-       <height>96</height>
+       <width>50</width>
+       <height>50</height>
       </size>
      </property>
      <property name="flat">
       <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QLabel" name="label">
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>My RSS Feed List</string>
      </property>
     </widget>
    </item>
@@ -93,7 +79,7 @@
      </column>
     </widget>
    </item>
-   <item row="4" column="2" colspan="2">
+   <item row="4" column="3">
     <widget class="QPushButton" name="closeButton2">
      <property name="minimumSize">
       <size>
@@ -104,9 +90,19 @@
      <property name="text">
       <string>Close</string>
      </property>
+     <property name="icon">
+      <iconset resource="../arado.qrc">
+       <normaloff>:/images/back.png</normaloff>:/images/back.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="4" column="2">
     <widget class="QPushButton" name="deleteButton">
      <property name="minimumSize">
       <size>
@@ -129,7 +125,7 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="4" column="1">
     <widget class="QPushButton" name="saveButton">
      <property name="minimumSize">
       <size>
@@ -152,7 +148,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="3">
+   <item row="4" column="0">
     <widget class="QPushButton" name="newButton">
      <property name="minimumSize">
       <size>
@@ -172,6 +168,20 @@
        <width>32</width>
        <height>32</height>
       </size>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLabel" name="label">
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>My RSS Feed List</string>
      </property>
     </widget>
    </item>
