--- a/arado.qrc
+++ b/arado.qrc
@@ -51,6 +51,7 @@
         <file>images/btn3.png</file>
         <file>images/youtubemp3play.png</file>
         <file>images/rssbackground.png</file>
+        <file>images/kugarblack.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
