--- a/ui/rss-list.ui
+++ b/ui/rss-list.ui
@@ -249,7 +249,7 @@
       <string>Edit</string>
      </property>
      <property name="checked">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
     </widget>
    </item>
