--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -94,7 +94,7 @@
             <string>Example: 720 connections per hour = one connection each 5 seconds.</string>
            </property>
            <property name="text">
-            <string>Connections per Hour</string>
+            <string>Connections per Hour (random &lt;-&gt; recent URLs)</string>
            </property>
           </widget>
          </item>
@@ -131,6 +131,31 @@
            <property name="icon">
             <iconset resource="../arado.qrc">
              <normaloff>:/images/filesaveas.png</normaloff>:/images/filesaveas.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QSlider" name="horizontalSlider_A">
+           <property name="toolTip">
+            <string>If you set the slider to random, you get a backup with old URLs, if you set the slider to recent, you only get new URLs with a fresh timestamp. </string>
+           </property>
+           <property name="value">
+            <number>20</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="invertedAppearance">
+            <bool>false</bool>
+           </property>
+           <property name="invertedControls">
+            <bool>false</bool>
+           </property>
+           <property name="tickPosition">
+            <enum>QSlider::TicksBelow</enum>
+           </property>
+           <property name="tickInterval">
+            <number>10</number>
            </property>
           </widget>
          </item>
@@ -238,7 +263,7 @@
             <string>Example: 60 connections per hour = one connection each 60 seconds.</string>
            </property>
            <property name="text">
-            <string>Connections per Hour</string>
+            <string>Connections per Hour(random &lt;-&gt; recent URLs)</string>
            </property>
           </widget>
          </item>
@@ -275,6 +300,25 @@
            <property name="icon">
             <iconset resource="../arado.qrc">
              <normaloff>:/images/filesaveas.png</normaloff>:/images/filesaveas.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QSlider" name="horizontalSlider_B">
+           <property name="toolTip">
+            <string>If you set the slider to random, you get a backup with old URLs, if you set the slider to recent, you only get new URLs with a fresh timestamp.</string>
+           </property>
+           <property name="sliderPosition">
+            <number>70</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="tickPosition">
+            <enum>QSlider::TicksBelow</enum>
+           </property>
+           <property name="tickInterval">
+            <number>10</number>
            </property>
           </widget>
          </item>
@@ -398,7 +442,7 @@
             <string>Example: 40 connections per hour = one connection each 90 seconds.</string>
            </property>
            <property name="text">
-            <string>Connections per Hour</string>
+            <string>Connections per Hour (random &lt;-&gt; recent URLs)</string>
            </property>
           </widget>
          </item>
@@ -435,6 +479,25 @@
            <property name="icon">
             <iconset resource="../arado.qrc">
              <normaloff>:/images/filesaveas.png</normaloff>:/images/filesaveas.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QSlider" name="horizontalSlider_C">
+           <property name="toolTip">
+            <string>If you set the slider to random, you get a backup with old URLs, if you set the slider to recent, you only get new URLs with a fresh timestamp.</string>
+           </property>
+           <property name="sliderPosition">
+            <number>90</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="tickPosition">
+            <enum>QSlider::TicksBelow</enum>
+           </property>
+           <property name="tickInterval">
+            <number>10</number>
            </property>
           </widget>
          </item>
