--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -294,6 +294,9 @@ background: white;</string>
            <property name="text">
             <string/>
            </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
           </widget>
          </item>
          <item row="1" column="1">
