--- a/ui/crawler-settings.ui
+++ b/ui/crawler-settings.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Add Feed-URL</string>
+   <string>Configure Openmielke URL-Collector</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
@@ -160,6 +160,9 @@
    </item>
    <item row="2" column="2">
     <widget class="QRadioButton" name="radioButton">
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
+     </property>
      <property name="text">
       <string>Crawl new URLs</string>
      </property>
