--- a/ui/url-display-webview.ui
+++ b/ui/url-display-webview.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>320</width>
     <height>300</height>
    </rect>
   </property>
@@ -23,6 +23,18 @@
       <number>0</number>
      </property>
      <widget class="QWidget" name="mainTab">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>50</height>
+       </size>
+      </property>
       <attribute name="title">
        <string>Search results</string>
       </attribute>
@@ -37,6 +49,12 @@
            <horstretch>50</horstretch>
            <verstretch>50</verstretch>
           </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>45</width>
+           <height>45</height>
+          </size>
          </property>
          <property name="url">
           <url>
